Added latest generated version of the docs

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -2544,7 +2544,7 @@ This section applies to ninjs 3.0 only.
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>eventStatus</code></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p>Status of the event (as opposed to the status of coverage of the event).<br>
-Suggested CV: <a href="http://cv.iptc.org/newscodes/eventoccurstatus/" class="bare">http://cv.iptc.org/newscodes/eventoccurstatus/</a> (which contains values such as "Planned, occurrence highly uncertain" and "Planned, then cancelled")</p>
+Suggested CV: <a href="http://cv.iptc.org/newscodes/eventstatus/" class="bare">http://cv.iptc.org/newscodes/eventstatus/</a> (which contains values such as "scheduled" and "canceled")</p>
 </div></div></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">uri</p></td>
 </tr>
@@ -4788,7 +4788,7 @@ used to validate ninjs documents.</p>
 </div>
 <div class="paragraph">
 <p>The latest IPTC ninjs schema is available for download at
-<a href="https://iptc.org/std/ninjs/ninjs-schema_2.1.json" class="bare">https://iptc.org/std/ninjs/ninjs-schema_2.1.json</a></p>
+<a href="https://iptc.org/std/ninjs/ninjs-schema_3.0.json" class="bare">https://iptc.org/std/ninjs/ninjs-schema_3.0.json</a></p>
 </div>
 </div>
 <div class="sect2">
